DuPont DevSB/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Country__c</fullName>
        <label>Lead Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Created_Time__c</fullName>
        <description>For reporting created date/time in increments of time rather than days</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead_Created_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Motivation__c</fullName>
        <description>This field is used to capture multiple actions requested by an inquirer, such as &quot;Request a Contact&quot;. This differs from &quot;Response Type&quot; which captures what tasks the inquiry agent performed on this inquiry/lead.</description>
        <inlineHelpText>This field is used to capture multiple actions requested by an inquirer, such as &quot;Request a Contact&quot;. This differs from &quot;Response Type&quot; which captures what tasks the inquiry agent performed on this inquiry/lead.</inlineHelpText>
        <label>Lead Motivation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Problem</fullName>
                </value>
                <value>
                    <fullName>Career Opportunity</fullName>
                </value>
                <value>
                    <fullName>Considering DuPont</fullName>
                </value>
                <value>
                    <fullName>Employment inquiry</fullName>
                </value>
                <value>
                    <fullName>Leadership Change</fullName>
                </value>
                <value>
                    <fullName>More information on services/solutions</fullName>
                </value>
                <value>
                    <fullName>Organization Incident</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Request a Contact</fullName>
                </value>
                <value>
                    <fullName>Researching DuPont</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Open_Time__c</fullName>
        <description>If Lead is open, then number of days lead is open from it&apos;s CreatedDate &amp; if Lead is closed then number of days Lead was open before it got closed. when the lead is closed (lead status = Track or End)</description>
        <formula>IF( 
(OR (ISPICKVAL(Status,&quot;Capture&quot;), ISPICKVAL(Status, &quot;Qualify&quot;), ISPICKVAL(Status, &quot;Route&quot;), ISPICKVAL(Status,&quot;Respond&quot;))), 
(NOW() - CreatedDate), 
(Actual_Closed_Date__c - DATEVALUE(CreatedDate)))

/* Administration note:-  If new Open Lead Statuses are created in the future, please add new open lead status in above formula.*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days this lead has remained opened.</inlineHelpText>
        <label>Lead Open Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <formula>IF( BEGINS( OwnerId , &apos;005&apos;) , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Queue__c</fullName>
        <label>Lead Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Datetime__c</fullName>
        <label>Legacy Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude</description>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_Campaign__c</fullName>
        <description>Used to capture &quot;opt in&quot; to specific mailing campaigns</description>
        <label>Mailing Campaign</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010 Pkg Awards Entry Received</fullName>
                </value>
                <value>
                    <fullName>2010 Pkg Awards Registration Received</fullName>
                </value>
                <value>
                    <fullName>2011 Pkg Awards Entry Received</fullName>
                </value>
                <value>
                    <fullName>2011 Pkg Awards Registration Received</fullName>
                </value>
                <value>
                    <fullName>Advanced Packaging Materials</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>April 13-14/Houston/Session#821</fullName>
                </value>
                <value>
                    <fullName>April 13-14/LasVegas/#826</fullName>
                </value>
                <value>
                    <fullName>April 22-23: Denver, CO</fullName>
                </value>
                <value>
                    <fullName>April 27: Rock Springs, WY</fullName>
                </value>
                <value>
                    <fullName>April 29: Salt Lake City, UT</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Artificial Stack Tester</fullName>
                </value>
                <value>
                    <fullName>B&amp;C-EMEA</fullName>
                </value>
                <value>
                    <fullName>Backpack</fullName>
                </value>
                <value>
                    <fullName>Belco Literature Request</fullName>
                </value>
                <value>
                    <fullName>Calendar (Golf)</fullName>
                </value>
                <value>
                    <fullName>Calendar (Nascar)</fullName>
                </value>
                <value>
                    <fullName>Calendar (Sailing)</fullName>
                </value>
                <value>
                    <fullName>Calendar DuPont</fullName>
                </value>
                <value>
                    <fullName>Car Care</fullName>
                </value>
                <value>
                    <fullName>Christmas Communication</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Contractor Safety</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Copper Cleaners and Removers</fullName>
                </value>
                <value>
                    <fullName>Copper PCMP Cleaners</fullName>
                </value>
                <value>
                    <fullName>CPM Materials</fullName>
                </value>
                <value>
                    <fullName>Diagnosis of Safety Problems</fullName>
                </value>
                <value>
                    <fullName>DuPont Magazine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to document when a Lead requests no paper mailings.</description>
        <inlineHelpText>Checked if this specific Contact has clearly expressed their will to be removed from all our paper communications going forward</inlineHelpText>
        <label>Mailing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Role__c</fullName>
        <label>Main Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CEO/President</fullName>
                </value>
                <value>
                    <fullName>Design Engineer</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>HSE</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Other employee</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Plant Manager</fullName>
                </value>
                <value>
                    <fullName>Process Engineer</fullName>
                </value>
                <value>
                    <fullName>Product development</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>15-(Construction)-Building,Gen Contractors</fullName>
                </value>
                <value>
                    <fullName>20-(Mfg)Food &amp; Kindred Products</fullName>
                </value>
                <value>
                    <fullName>29-(Energy/Mfg)Petroleum Refining &amp; Related Industries</fullName>
                </value>
                <value>
                    <fullName>39-(Mfg)Misc. Manufacturing Industries</fullName>
                </value>
                <value>
                    <fullName>47-(Transp)Transportation Services</fullName>
                </value>
                <value>
                    <fullName>49a-(Energy)Electric, Gas,</fullName>
                </value>
                <value>
                    <fullName>59-(Retai)-Misc. Retail</fullName>
                </value>
                <value>
                    <fullName>80-Healthcare Services</fullName>
                </value>
                <value>
                    <fullName>87-Engineering, Accounting, Research, Mgmnt Services</fullName>
                </value>
                <value>
                    <fullName>89-Services Not Elsewhere Classified</fullName>
                </value>
                <value>
                    <fullName>9F-Government-Federal</fullName>
                </value>
                <value>
                    <fullName>9L-Government-Local</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Appliance  / consumer electronics</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Chemical Industry</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>County/DOT</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy/Utility</fullName>
                </value>
                <value>
                    <fullName>Equipment &amp; Machinery</fullName>
                </value>
                <value>
                    <fullName>Food industry</fullName>
                </value>
                <value>
                    <fullName>Food Safety &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>Geothermal</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <label>Migration DB ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_of_Employees__c</fullName>
        <description>Can be either number of employees at a company or number of people in a household.</description>
        <inlineHelpText>Number of Employees at the Company</inlineHelpText>
        <label>Nb of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-99</fullName>
                </value>
                <value>
                    <fullName>1-19</fullName>
                </value>
                <value>
                    <fullName>100-499</fullName>
                </value>
                <value>
                    <fullName>500-999</fullName>
                </value>
                <value>
                    <fullName>1000-4999</fullName>
                </value>
                <value>
                    <fullName>5000+</fullName>
                </value>
                <value>
                    <fullName>1,000-9,999</fullName>
                </value>
                <value>
                    <fullName>10,000-49,999</fullName>
                </value>
                <value>
                    <fullName>50,000+</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked once the lead agent ascertains that the customer&apos;s need is clearly defined.</description>
        <inlineHelpText>This field is checked once the lead agent ascertains that the customer&apos;s need is clearly defined.</inlineHelpText>
        <label>Need Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Type__c</fullName>
        <description>Type of Revenue stream entered in the Opportunity Amount of this lead</description>
        <inlineHelpText>Type of Revenue stream entered in the Opportunity Amount of this lead</inlineHelpText>
        <label>Opportunity Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>Estimated total DuPont sale this lead will bring if successfully closed</description>
        <inlineHelpText>Estimated total DuPont sale this lead will bring if successfully closed</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt_In_DuPont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In DuPont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizational_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizational Group</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Channel_Type__c</fullName>
        <inlineHelpText>Channel Type of the DuPont touch point where this lead was collected. This can be different from the channel where the customer heard from us (use Lead Source for this purpose)</inlineHelpText>
        <label>Origin Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Data File</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Paper Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Website-Secure</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_Form__c</fullName>
        <inlineHelpText>Form used to collect this lead</inlineHelpText>
        <label>Origin Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Origin_Name__c</fullName>
        <description>Specific Origin channel name for :
CALLS : phone number (800# or description on phone display)     
WEBSITE INQUIRIES: select name of CONTACT US FORM or common website URL 
 Note: Use Campaigns or First Referrer name field for Trade Show name or other origin details</description>
        <inlineHelpText>select phone number (display) for calls 
select webform name or URL for web inquiries</inlineHelpText>
        <label>Origin Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2013 FGF Energy Whitepaper Download</fullName>
                </value>
                <value>
                    <fullName>2013 FGF Protection Whitepaper Download</fullName>
                </value>
                <value>
                    <fullName>4-1000</fullName>
                </value>
                <value>
                    <fullName>Account statement</fullName>
                </value>
                <value>
                    <fullName>Brasil 800</fullName>
                </value>
                <value>
                    <fullName>DDF 800-441-0575</fullName>
                </value>
                <value>
                    <fullName>DIMC-Local-Corp Phone</fullName>
                </value>
                <value>
                    <fullName>DIMC-Local-SBU Phone</fullName>
                </value>
                <value>
                    <fullName>DIMC-Regional-Corp Phone</fullName>
                </value>
                <value>
                    <fullName>eCommerce - State Available</fullName>
                </value>
                <value>
                    <fullName>Follow The Truck</fullName>
                </value>
                <value>
                    <fullName>food.dupont.cn</fullName>
                </value>
                <value>
                    <fullName>http://www2.dupont.com/DuPont_Safety_Resources/zh_CN/</fullName>
                </value>
                <value>
                    <fullName>Inbound Other</fullName>
                </value>
                <value>
                    <fullName>info.mexico@mex.dupont.com</fullName>
                </value>
                <value>
                    <fullName>Inquiry Center</fullName>
                </value>
                <value>
                    <fullName>Mexico Local</fullName>
                </value>
                <value>
                    <fullName>Mioge</fullName>
                </value>
                <value>
                    <fullName>National Safety Congress</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Partner Form</fullName>
                </value>
                <value>
                    <fullName>PI/General</fullName>
                </value>
                <value>
                    <fullName>Privacy Breach</fullName>
                </value>
                <value>
                    <fullName>Social Login</fullName>
                </value>
                <value>
                    <fullName>www.coastaltraining.cn</fullName>
                </value>
                <value>
                    <fullName>www.dupont.ca</fullName>
                </value>
                <value>
                    <fullName>www.dupont.co.in/Shunya_Download</fullName>
                </value>
                <value>
                    <fullName>www.dupont.com</fullName>
                </value>
                <value>
                    <fullName>www.dupont.com/40_40/en_GB</fullName>
                </value>
                <value>
                    <fullName>www.dupont.com/ANZ short form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_Tracking_Code__c</fullName>
        <description>Use this field to pass detailed web tracking codes or information for better metrics reporting</description>
        <inlineHelpText>Use this field to pass detailed web tracking codes or information for better metrics reporting</inlineHelpText>
        <label>Origin Tracking Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_Tracking_Source__c</fullName>
        <description>Description: Location from where the lead or contact originated. Example: User first clicked on &quot;banner ad&quot;. Typically generated from web analytics engine (i.e. UTM Source).</description>
        <inlineHelpText>Description: Location from where the lead or contact originated. Example: User first clicked on &quot;banner ad&quot;. Typically generated from web analytics engine (i.e. UTM Source).</inlineHelpText>
        <label>Origin Tracking Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_URL__c</fullName>
        <description>Page of the Origin which led the Inquirer to go into a Contact Us Form or Phone call with DuPont.</description>
        <inlineHelpText>The Digital Page the Lead was at when deciding to enter our Form (i.e. Internal Referrer)</inlineHelpText>
        <label>Origin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Originator_External_email__c</fullName>
        <label>Originator External email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <label>Originator Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Org__c</fullName>
        <description>Owning Organisation of the Originator of this Lead/Inquiry</description>
        <label>Originator Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DPT-AFS</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>DTF</fullName>
                </value>
                <value>
                    <fullName>M&amp;S</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <description>SBU(Strategic Business Unit)-BU(Business Unit)-SubBU(Business or Product Line)</description>
        <inlineHelpText>Relevant sub-business for the Owning Business</inlineHelpText>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>DSS-Clean Technologies</fullName>
                </value>
                <value>
                    <fullName>DSS-Consulting</fullName>
                </value>
                <value>
                    <fullName>DSS-L&amp;D</fullName>
                </value>
                <value>
                    <fullName>IB-Biomaterials-BioIsoprene</fullName>
                </value>
                <value>
                    <fullName>SHE</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_SBU__c</fullName>
        <label>Owning SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Industrial Biosciences</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>Safety Health &amp; Environment</fullName>
                </value>
                <value>
                    <fullName>Science &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Sustainable Solutions</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>